--- a/.github/workflows/create-pdf.yml
+++ b/.github/workflows/create-pdf.yml
@@ -123,7 +123,7 @@ jobs:
           tag: ${{ env.RELEASE_TAG }}
           name: ${{ env.RELEASE_TAG }}
           artifacts: |
-            pdf-generator/build/${{ RELEASE_TAG }}.pdf
+            pdf-generator/build/${{ env.RELEASE_TAG }}.pdf
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: 更新 Release 说明
