--- a/.github/workflows/create-pdf.yml
+++ b/.github/workflows/create-pdf.yml
@@ -22,6 +22,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y xfonts-encodings xfonts-utils
           sudo dpkg -i ttf-ms-win11-*.deb
+          sudo apt-get install -y fonts-noto
           
       - name: 设置时区    
         run: |
