--- a/.github/workflows/create-pdf.yml
+++ b/.github/workflows/create-pdf.yml
@@ -64,7 +64,7 @@ jobs:
         run: |
           sudo apt-get install -y \
             libpango-1.0-0 \
-            libpangoft2 \
+            libpangoft2-1.0-0 \
             libpangocairo-1.0-0
           pip install weasyprint mistune pygments
 
