--- a/.github/workflows/create-pdf.yml
+++ b/.github/workflows/create-pdf.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       # ================= 字体安装部分 =================
-      - name: Checkout 字体仓库
+      - name: 安装字体
         run: |
           sudo apt-get update
           sudo apt-get install -y fonts-noto
