--- a/.github/workflows/create-pdf.yml
+++ b/.github/workflows/create-pdf.yml
@@ -11,17 +11,10 @@ jobs:
 
     steps:
       # ================= 字体安装部分 =================
-      - name: Checkout 字体仓库
-        uses: actions/checkout@v4
-        with:
-          repository: ykla/ttf-mswin11-zh-deb
-          path: fonts-repo
-      - name: 安装字体依赖
+      - name: 安装字体
         run: |
-          cd fonts-repo
           sudo apt-get update
-          sudo apt-get install -y xfonts-encodings xfonts-utils
-          sudo dpkg -i ttf-ms-win11-*.deb
+          sudo apt-get install -y fonts-noto
           
       - name: 设置时区    
         run: |
