--- a/.github/workflows/check-images.yml
+++ b/.github/workflows/check-images.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v4  # 升级到 v4 版本
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -22,6 +22,8 @@ jobs:
         run: |
           pip install regex
           python .github/scripts/check_images.py
+          
+          # 使用新的环境文件写法
           if [ -s image-report.md ]; then
             echo "report_exists=1" >> $GITHUB_OUTPUT
           else
@@ -30,9 +32,9 @@ jobs:
 
       - name: Create Issue
         if: steps.image-check.outputs.report_exists == '1'
-        uses: peter-evans/create-issue-from-file@v3
+        uses: peter-evans/create-issue-from-file@v5  # 升级到 v5 版本
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          title: "Image Reference Report: Missing or Unused Images"
+          title: "图片检查报告: 存在缺失或未使用的图片"
           content-filepath: ./image-report.md
           labels: report, automation
