--- a/.github/workflows/check-images.yml
+++ b/.github/workflows/check-images.yml
@@ -1,4 +1,5 @@
 name: "🔗 检查 Markdown 图片引用"
+
 on:
   push:
     paths:
@@ -10,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4  # 升级到 v4 版本
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -22,8 +23,8 @@ jobs:
         run: |
           pip install regex
           python .github/scripts/check_images.py
-          
-          # 使用新的环境文件写法
+
+          # 判断报告是否存在且不为空
           if [ -s image-report.md ]; then
             echo "report_exists=1" >> $GITHUB_OUTPUT
           else
@@ -32,9 +33,9 @@ jobs:
 
       - name: Create Issue
         if: steps.image-check.outputs.report_exists == '1'
-        uses: peter-evans/create-issue-from-file@v5  # 升级到 v5 版本
+        uses: peter-evans/create-issue-from-file@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          title: "图片检查报告: 存在缺失或未使用的图片"
+          title: "图片检查报告"
           content-filepath: ./image-report.md
           labels: report, automation
